--- a/ppms_project/profilingApp/templates/activities/Admin - Validation.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Validation.html
@@ -205,7 +205,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
                 <div class="modal-header" >
-                    <h5 class="modal-title fas fa-question-circle d-flex  justify-content-center" id="exampleModalLabel">  Confirmation</h5>
+                    <h5 class="modal-title fas fa-question-circle d-flex justify-content-center" id="exampleModalLabel"> Confirmation</h5>
                 </div>
                 <div class="modal-body mx-4">
                     <form action="validation" id="form" method="POST">
@@ -214,9 +214,9 @@
                             <h5 class="modal-body" style="text-align:center;" id="message"></h5><br>
                         </div>
                         <div class="modal-footer" style="justify-content:center">
-                            <div class="d-flex justify-content-center">
-                                <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Validate" style="margin-right: 2%; background-color: rgb(44, 95, 34);">
+                            <div class="d-flex justify-content-center gap-2">
                                 <button type="button" onclick="cancelValidationModal()" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button>
+                                <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Confirm" style="background-color: rgb(44, 95, 34);">
                             </div>
                         </div>
                     </form>
