--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -40,13 +40,13 @@
                     <ul class="nav text-small">
                         <li>
                             <a href="{% url 'bhw_home' %}" class="nav-link" style="color:rgb(27, 177, 92) !important;" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
-                            title="Barangay Health Worker Home">
+                            title="Home">
                             <i class="fa fa-fw fa-home" style="font-size: 24px;"></i>   
                             </a>
                         </li>
                         <li>
                             <a href="{% url 'preschooler_dashboard' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="Preschooler Profile">
+                            title="Preschooler List">
                             <i class="fa fa-fw fa-id-card " style="font-size: 24px;"></i>
                             </a>
                         </li>
