--- a/ppms_project/profilingApp/templates/activities/Admin - Set Password.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Set Password.html
@@ -23,32 +23,28 @@
 
 <body class="mt-0 mb-0 d-flex align-items-stretch" style="background-color: black;">
     <!-- Dashboard -->
-    <div id="grid" class="container-fluid mt-0" >
-        <div class="container-grid" style="padding: 10% 5% 5% 5%;">
-            <div class="card" style="margin-left:30%; margin-right:30%;">
-
+    <div id="grid" class="container-fluid mt-0 p-0 d-flex align-items-center justify-content-center" >
+        <div class="card flex-wrap" id="profileCard2" >
             <div class="card-header">
-            <h4 class="d-flex justify-content-center"><i class="fas fa-clipboard-check mx-2"></i> Set Password</h4>
-            
+            <h5 class="d-flex justify-content-center"><i class="fas fa-clipboard-check mx-2"></i> Set Password</h5>
             </div>
             <form action="" method="POST">
                 {% csrf_token %}
-            <div class="card-body p-4">
-                <div class="md-form justify-content-center d-flex">
-                    
-                    <div class="row d-block justify-content-center align-items-center">
-                        <div class="d-flex justify-content-center">
-                            <p style="margin-right:2%;">Set new password for </p> 
+            <div class="card-body p-3">
+                <div class="md-form justify-content-center d-flex" style="width:100%">
+                    <div class="row d-flex justify-content-center align-items-center">
+                        <div class=" d-sm-flex d-block justify-content-center gap-2 text-center ">
+                            <p>Set new password for </p> 
                             <p class="fw-bold"> {{ user.first_name }} {{ user.last_name }} </p>
                         </div>
-                        <hr>    
-                        <div class="col md-form p-2 d-flex justify-content-end">
+                    <hr>    
+                        <div class="col md-form p-2  d-sm-flex d-block justify-content-end align-items-center text-center">
                             <label class="mx-2"id="user-lbl" data-error="wrong" data-success="right">New Password: </label>
                             {{ form.new_password1 }}
                             
                         </div>
-                        <div class="col md-form p-2 d-flex">
-                            <label class="mx-2" id="user-lbl" data-error="wrong" data-success="right">Confirm New Password: </label>
+                        <div class="col md-form p-2  d-sm-flex d-block justify-content-end align-items-center text-center">
+                            <label class="mx-2" id="user-lbl" data-error="wrong" data-success="right">Confirm Password: </label>
                             {{ form.new_password2 }}
                         </div>
     
