--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -138,19 +138,19 @@
                     <div class="row mb-3 align-items-stretch">
                         <!-- Validated BHW Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">                      
-                            <div class="card hoverable shadow-sm bg-white  d-flex align-items-stretch " style="height: 165px;">
-                                <div class="card-body p-4 d-flex flex-column align-items-stretch justify-content-center">
+                            <div class="card hoverable shadow-sm bg-white  d-flex align-items-stretch " style="height: 165px; border-radius: 10px;">
+                                <div class="card-body p-3 d-flex flex-column align-items-stretch justify-content-center">
                                     <div class="row">
-                                        <div class="col-4 d-flex justify-content-center align-items-center text-center">
+                                        <div class="col-6 d-flex justify-content-end align-items-center text-center">
                                             <i class="fas fa-3x fa-lg fa-user-md" style="color: #28a745 ; position:absolute;"></i>
                                         </div>
-                                        <div class="col-8 d-block justify-content-center text-center align-items-center" >
+                                        <div class="col-6 d-flex justify-content-start text-center align-items-center" >
                                             <div class="row d-flex justify-content-center text-center align-items-stretch">
-                                                <h1 class="card-title" style="font-size: 35px;">{{ validated_count }}</h1>
+                                                <h1 class="card-title m-0 fw-bold" style="font-size: 35px;">{{ validated_count }}</h1>
                                             </div>
-                                            <div class="row d-flex justify-content-center text-center align-items-stretch">
-                                                <span>Validated BHW</span>
-                                            </div>
+                                        </div>
+                                        <div class="col-12 mt-3 d-flex justify-content-center text-center align-items-center">
+                                            <span>Validated BHW</span>
                                         </div>
                                     </div>
                                 </div>
@@ -158,21 +158,19 @@
                         </div>
                         <!-- Parents Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">
-                            <div class="card hoverable shadow-sm bg-white  d-flex align-items-stretch " style="height: 165px;">
-                                <div class="card shadow-sm bg-white  d-flex align-items-stretch" style="height: 165px;">
-                                    <div class="card-body p-4  d-flex flex-column align-items-stretch justify-content-center">
-                                        <div class="row">
-                                            <div class="col-4 d-flex justify-content-center align-items-center text-center">
-                                                <i class="fas fa-3x fa-lg fa-user" style="color: #f26221 ; position:absolute;"></i>
+                            <div class="card hoverable shadow-sm bg-white  d-flex align-items-stretch " style="height: 165px; border-radius: 10px;">
+                                <div class="card-body p-4  d-flex flex-column align-items-stretch justify-content-center">
+                                    <div class="row">
+                                        <div class="col-6 d-flex justify-content-end align-items-center text-center">
+                                            <i class="fas fa-3x fa-lg fa-user" style="color: #f26221 ; position:absolute;"></i>
+                                        </div>
+                                        <div class="col-6 d-flex justify-content-start text-center align-items-center" >
+                                            <div class="row d-flex justify-content-center text-center align-items-stretch">
+                                                <h1 class="card-title m-0 fw-bold" style="font-size: 35px;">{{ parent_count }}</h1>
                                             </div>
-                                            <div class="col-8 d-block justify-content-center text-center align-items-center" >
-                                                <div class="row d-flex justify-content-center text-center align-items-center">
-                                                    <h1 class="card-title" style="font-size: 35px;">{{ parent_count }}</h1>
-                                                </div>
-                                                <div class="row d-flex justify-content-center text-center align-items-center">
-                                                    <span>Number of Parents</span>
-                                                </div>
-                                            </div>
+                                        </div>
+                                        <div class="col-12 mt-3 d-flex justify-content-center text-center align-items-center">
+                                            <span>Parents</span>
                                         </div>
                                     </div>
                                 </div>
@@ -180,19 +178,19 @@
                         </div>
                         <!-- Non - Validated BHW Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2 ">
-                            <div class="card hoverable shadow-sm bg-white  d-flex align-items-stretch " style="height: 165px;">
+                            <div class="card hoverable shadow-sm bg-white  d-flex align-items-stretch flex-wrap " style="height: 165px; border-radius: 10px;">
                                 <div class="card-body p-3  ms-3 d-flex flex-column align-items-stretch justify-content-center">
                                     <div class="row">
-                                        <div class="col-4 d-flex justify-content-center align-items-center text-center">
+                                        <div class="col-6 d-flex justify-content-end align-items-center text-center">
                                             <i class="fas fa-3x fa-lg fa-user-md" style="color: #dc3545 ; position:absolute;"></i>
                                         </div>
-                                        <div class="col-8 d-block justify-content-center text-center align-items-center" >
-                                            <div class="row d-flex justify-content-center text-center align-items-center">
-                                                <h1 class="card-title" style="font-size: 35px;">{{ invalidated_count }}</h1>
+                                        <div class="col-6 d-flex justify-content-start text-center align-items-center" >
+                                            <div class="row d-flex justify-content-center text-center align-items-stretch">
+                                                <h1 class="card-title m-0 fw-bold" style="font-size: 35px;">{{ invalidated_count }}</h1>
                                             </div>
-                                            <div class="row d-flex justify-content-center text-center align-items-center">
-                                                <span>Unvalidated BHW</span>
-                                            </div>
+                                        </div>
+                                        <div class="col-12 mt-3 d-flex justify-content-center text-center align-items-center">
+                                            <span>Unvalidated BHW</span>
                                         </div>
                                     </div>
                                 </div>
@@ -200,20 +198,19 @@
                         </div>
                         <!-- Preschoolers Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">
-                            <div class="card hoverable shadow-sm bg-white d-flex align-items-stretch " style="height: 165px;">
+                            <div class="card hoverable shadow-sm bg-white d-flex align-items-stretch " style="height: 165px; border-radius: 10px;">
                                 <div class="card-body p-4  d-flex flex-column align-items-stretch justify-content-center">
                                     <div class="row">
-                                        <div class="col-4 d-flex justify-content-center align-items-center text-center">
+                                        <div class="col-6 d-flex justify-content-end align-items-center text-center">
                                             <i class="fas fa-3x fa-lg fa-child" style="color: #ffc107 ; position:absolute;"></i>
                                         </div>
-                                        <div class="col-8 d-block justify-content-center text-center align-items-center" >
-                                            <div class="row d-flex justify-content-center text-center align-items-center">
-                                                <h1 class="card-title" style="font-size: 35px;">{{ preschooler_count }}</h1>
+                                        <div class="col-6 d-flex justify-content-start text-center align-items-center" >
+                                            <div class="row d-flex justify-content-center text-center align-items-stretch">
+                                                <h1 class="card-title m-0 fw-bold" style="font-size: 35px;">{{ preschooler_count }}</h1>
                                             </div>
-                                            <div class="row d-flex justify-content-center text-center align-items-center">
-                                                <span>Number of Preschoolers</span>
-                                            </div>
-                                            
+                                        </div>
+                                        <div class="col-12 mt-3 d-flex justify-content-center text-center align-items-center">
+                                            <span>Preschoolers</span>
                                         </div>
                                     </div>
                                 </div>
