--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -336,7 +336,7 @@
                                 </div>
                             </div>
                             <div class="card-footer small text-muted">
-                                Last Measuring Date : {{ preschooler.date_measured }} 
+                                Last Measuring Date : {{ preschooler.date_measured }} | ({{ preschooler.age_measured }} months Old)
                             </div>
                         </div>
                     </div>
@@ -444,7 +444,7 @@
                                         </div>
                                     {% elif preschooler.whfa >= -3.0 and preschooler.whfa < -2.0 %}
                                         <div class="card-body p-3">
-                                            <p class="card-text  h5" style="color: rgb(255, 241, 2);">Wasted ({{ preschooler.whfa }})</p>
+                                            <p class="card-text  h5" style="color: rgb(255, 241, 2);">Moderately Wasted ({{ preschooler.whfa }})</p>
                                         </div>
                                     {% else %}
                                         <div class="card-body p-3">
