--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -263,6 +263,9 @@
                                 <hr>
 
                             </div>
+                            <div class="card-footer small text-muted">
+                                Last Measuring Date : {{ preschooler.date_measured }} | ({{ preschooler.age_measured }} months Old)
+                            </div>
                         </div>
                     </div>
                     
